...
    <string name="manage_invites_refused">Refused</string>
    <string name="manage_invites_to_invite">To Invite</string>
    <string name="invite_button">Invite</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_public_event_button">Public</string>
    <string name="create_private_event_button">Private</string>
    <string name="search_bar_placeholder">Search</string>
    <string name="add_participants">Add Participants</string>
    <string name="add_image">Add Image</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="email_text_field">Email</string>
...
